@@ -1,5 +1,11 @@
 2008-06-22  Laurent Debacker <debackerl@gmail.com> 
 
+	* Theme.cs: Change background color depending on current state
+	* Ribbon.cs: Bugfix for layout code
+	* ApplicationButton.cs: Bugfix for widget initialization
+
+2008-06-22  Laurent Debacker <debackerl@gmail.com> 
+
 	* QuickAccessToolbar.cs: Bugfix, add NO_WINDOW flag
 	* Theme.cs: Implement final app button theme
 	* Ribbon.cs: Bugfix, call app button and quick access toolbar when calling
